[gd_scene format=3 uid="uid://33iivb4swgc1"]

[ext_resource type="Script" uid="uid://bu6e2adhi84m0" path="res://system/main_scene.gd" id="1_kgd68u"]

[node name="MainScene" type="Node" unique_id=434763017]
script = ExtResource("1_kgd68u")

[node name="ScreenRoot" type="CanvasLayer" parent="." unique_id=2143696512]

[node name="ScreenHost" type="Control" parent="ScreenRoot" unique_id=137574266]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameRoot" type="Node" parent="." unique_id=205102881]
